@@ -1,7 +1,7 @@
 Package: HiddenMarkov
 Title: Hidden Markov Models
-Version: 1.3-0
-Date: 2010-01-22
+Version: 1.3-1
+Date: 2010-02-25
 Author: David Harte
 Maintainer: David Harte <david@statsresearch.co.nz>
 Description: Contains functions for the analysis of Discrete Time
@@ -15,6 +15,6 @@ Suggests: snow
 License: GPL (>= 2)
 URL: http://cran.at.r-project.org/web/packages/HiddenMarkov,
         http://www.statsresearch.co.nz/software.html
-Packaged: 2010-01-22 00:37:02 UTC; david
+Packaged: 2010-02-24 20:51:21 UTC; david
 Repository: CRAN
-Date/Publication: 2010-01-22 13:03:13
+Date/Publication: 2010-02-25 11:10:04
