@@ -1,4 +1,4 @@
-Estep.mmglm1 <- function(object){
+Estep.mmglm1 <- function(object, fortran=TRUE){
     #    x is a mmglm1 object
     m <- nrow(object$Pi)
     n <- length(object$y)
@@ -7,17 +7,14 @@ Estep.mmglm1 <- function(object){
         prob[,k] <- dmmglm(object$y, object$beta[,k], object$sigma[k],
                            object$glmfamily, object$Xdesign, log=FALSE,
                            size=object$size)
-    y <- forwardback.dthmm(object$Pi, object$delta, prob, fortran=FALSE)
+    y <- forwardback.dthmm(object$Pi, object$delta, prob, fortran=fortran)
     logbeta <- y$logbeta
     logalpha <- y$logalpha
-# return(logalpha)
     LL <- y$LL
     u <- exp(logalpha + logbeta - LL)
     v <- array(NA, dim=c(n-1, m, m))
     for (k in 1:m) {
         logprob <- log(prob[-1, k])
-#       logprob <- dfunc(x=object$x[-1], getj(pm, k),
-#                        getj(pn, -1), log=TRUE)
         logPi <- matrix(log(object$Pi[, k]), byrow=TRUE,
                         nrow=n-1, ncol=m)
         logPbeta <- matrix(logprob + logbeta[-1, k],
