@@ -35,7 +35,53 @@ Value of the log-likelihood times negative one.
 \seealso{\code{\link[stats]{nlm}}, \code{\link[stats]{optim}}, \code{\link{Transform-Parameters}}, \code{\link{BaumWelch}}}
 
 \examples{
-#    Simulate an example dataset
+#   Example where the Markov chain is assumed to be stationary
+
+Pi <- matrix(c(0.8, 0.1, 0.1,
+               0.1, 0.6, 0.3,
+               0.2, 0.3, 0.5),
+             byrow=TRUE, nrow=3)
+
+#   start simulation in state 2
+delta <- c(0, 1, 0)
+
+x <- dthmm(NULL, Pi, delta, "exp", list(rate=c(5, 2, 0.2)), nonstat=FALSE)
+x <- simulate(x, nsim=5000, seed=5)
+
+#   Approximate solution using BaumWelch
+x1 <- BaumWelch(x, control=bwcontrol(maxiter=1000, tol=1e-5))
+
+
+#   Exact solution using nlm
+
+allmap <- function(y, p){
+    #    maps vector back to delta, Pi and rate
+    m <- sqrt(length(p))
+    y$Pi <- vector2Pi(p[1:(m*(m-1))])
+    y$pm$rate <- exp(p[(m^2-m+1):(m^2)])
+    y$delta <- compdelta(Pi)
+    return(y)
+}
+
+p <- c(Pi2vector(x$Pi), log(x$pm$rate))
+z <- nlm(neglogLik, p, object=x, pmap=allmap,
+         print.level=2, gradtol=0.000001, iterlim=500)
+x2 <- allmap(x, z$estimate)
+
+
+#   compare parameter estimates
+print(summary(x))
+print(summary(x1))
+print(summary(x2))
+
+
+#--------------------------------------------------------
+#   Estimate only the off diagonal elements in the matrix Pi
+#   Hold all others as in the simulation
+
+#   This function maps the changeable parameters into the
+#   dthmm object - done within the function neglogLik
+#   The logit-like transform removes boundaries
 
 Pi <- matrix(c(0.8, 0.1, 0.1,
                0.1, 0.6, 0.3,
@@ -46,48 +92,6 @@ delta <- c(0, 1, 0)
 
 x <- dthmm(NULL, Pi, delta, "exp", list(rate=c(5, 3, 1)))
 x <- simulate(x, nsim=5000, seed=5)
-
-
-#--------------------------------------------------------
-#   Fully estimate both Pi and rate
-
-allmap <- function(y, p){
-    #    maps vector back to Pi and rate
-    m <- sqrt(length(p))
-    y$Pi <- vector2Pi(p[1:(m*(m-1))])
-    y$pm$rate <- exp(p[(m^2-m+1):(m^2)])
-    return(y)
-}
-
-#    Start using the EM algorithm
-x1 <- BaumWelch(x, control=bwcontrol(maxiter=1000, tol=0.01))
-
-#    use above as initial values for the nlm function
-#    map parameters to a single vector, fixed delta
-p <- c(Pi2vector(x1$Pi), log(x1$pm$rate))
-
-#    complete estimation using nlm
-z <- nlm(neglogLik, p, object=x, pmap=allmap,
-         print.level=2, gradtol=0.000001, iterlim=500)
-
-#    dthmm object with estimated parameter values from nlm
-x2 <- allmap(x, z$estimate)
-
-#    compare log-likelihoods
-print(logLik(x))
-print(logLik(x1))
-print(logLik(x2))
-
-#   print final parameter estimates
-print(summary(x2))
-
-#--------------------------------------------------------
-#   Estimate only the off diagonal elements in the matrix Pi
-#   Hold all others as in the simulation
-
-#   This function maps the changeable parameters into the
-#   dthmm object - done within the function neglogLik
-#   The logit-like transform removes boundaries
 
 offdiagmap <- function(y, p){
     #   rows must sum to one
